# ElkapodAlgorithms

./: .gitignore  README.md  __init__.py  pyproject.toml  task_space_trajectory.py
elkapod_algorithms/kinematics/: kinematics_exceptions.py  kinematics_solvers.py
elkapod_algorithms/kinematics/tests/: __init__.py  test_kinematics_initialization.py
elkapod_algorithms/stability_check/: stability_check.py  stability_math.py
elkapod_algorithms/stability_check/tests/: test_stability_check.py
elkapod_algorithms/trajectories/joint_space_trajectory/: joint_space_trajectory_with_linear_sections.py  joint_trajectories.py
elkapod_algorithms/trajectories/task_space_trajectory/: task_space_trajectory.py
kinematics/: __init__.py  kinematics.py  kinematics_exceptions.py  kinematics_solvers.py  kinematics_utils.py
kinematics/tests/: __init__.py  temp_update.py  test_kinematics_initialization.py  test_of_forward_kinematics.py  test_of_inverse_kinematics.py
stability_check/: stability_check.py  stability_math.py
stability_check/tests/: test_stability_check.py
trajectories/joint_space_trajectory/: __init__.py  joint_space_trajectory.ipynb  joint_space_trajectory.py  joint_space_trajectory_with_linear_sections.py  joint_space_trajectory_with_via_points.py  joint_trajectories.py  utils.py
trajectories/task_space_trajectory/: task_space_trajectory.py
