[tool.poetry]
name = "elkapod_algorithms"
version = "1.0.0"
license = {file = "LICENSE"}
description = "Algorithms used in Elkapod walking robot"
authors = ["Elkapod Bionik <hexapod.bionik@gmail.com>"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "elkapod_algorithms" }
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.2"
pytest = ">=6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
